--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,11 +27,18 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
+    //firebase
     implementation 'com.google.firebase:firebase-core:12.0.1'
     implementation 'com.google.firebase:firebase-auth:12.0.1'
     implementation 'com.google.firebase:firebase-database:12.0.1'
     implementation 'com.google.firebase:firebase-storage:12.0.1'
+
+    //google
     implementation 'com.google.android.gms:play-services-auth:12.0.1'
+
+    //facebook
+    implementation 'com.facebook.android:facebook-android-sdk:4.31.0'
+
 
 }
 apply plugin: 'com.google.gms.google-services'
