--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,9 @@ dependencies {
     //facebook
     implementation 'com.facebook.android:facebook-android-sdk:4.31.0'
 
+    //navbar
+    implementation 'com.android.support:appcompat-v7:27.1.0'
+    implementation 'com.android.support:design:27.1.0'
 
 }
 apply plugin: 'com.google.gms.google-services'
