--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"/>
-
+        <activity
+            android:name=".CoreActivity"
+            android:label="@string/title_activity_core"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
