--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,12 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation 'com.google.firebase:firebase-core:12.0.1'
+
+
     implementation (group: 'com.cloudant', name: 'cloudant-sync-datastore-android', version:'latest.release')
+    implementation group: 'com.cloudant', name: 'cloudant-client', version: '2.12.0'
+    implementation group: 'com.squareup.okhttp3', name: 'okhttp-urlconnection', version: '3.9.0'
+    implementation 'com.mcxiaoke.volley:library:1.0.19'
 }
 
 apply plugin: 'com.google.gms.google-services'
