--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,20 +20,15 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:27.1.0'
-    implementation 'com.android.support:support-v4:27.1.0'
-    implementation 'com.android.support:design:27.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:support-v4:27.1.1'
+    implementation 'com.android.support:design:27.1.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    implementation 'com.google.firebase:firebase-core:12.0.1'
 
-
-    implementation (group: 'com.cloudant', name: 'cloudant-sync-datastore-android', version:'latest.release')
-    implementation group: 'com.cloudant', name: 'cloudant-client', version: '2.12.0'
-    implementation group: 'com.squareup.okhttp3', name: 'okhttp-urlconnection', version: '3.9.0'
-    implementation 'com.mcxiaoke.volley:library:1.0.19'
+    implementation group: 'com.cloudant', name: 'cloudant-sync-datastore-android-encryption', version:'2.2.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
